<resources>
    <string name="app_name">workshop-tl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Generic -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="generic_error">Ops, ha ocurrido un error</string>
    <string name="default_notification_channel_id">1</string>
    <string name="permission_denied">El permiso de notificaciones ha sido negado</string>

    <!-- Login -->
    <string name="login">Iniciar Sesión</string>
    <string name="not_register">¿No estás registrado?</string>
    <string name="register">Registrarse</string>

    <!-- Signup -->
    <string name="confirm_email">Confirma tu email</string>
    <string name="password_numbers">• La contraseña debe contener al menos un número</string>
    <string name="password_uppercase">• La contraseña debe contener al menos una letra mayúscula</string>
    <string name="password_lowercase">• La contraseña debe contener al menos una letra minúscula</string>
    <string name="password_length">• La contraseña debe tener al menos 8 caracteres</string>
    <string name="password_special_characters">• La contraseña debe contener al menos un carácter especial</string>


    <!-- Profile -->
    <string name="personal_information">Ingresa tus datos personales</string>
    <string name="name">Nombre(s)</string>
    <string name="last_name">Apellidos</string>
    <string name="gender">Género</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="save">Guardar</string>
    <string name="select_gender">Selecciona tu género</string>
    <string name="add_income">¿Cuáles son tus ingresos mensuales?</string>
    <string name="hint_money">$0.00</string>

    <!-- Dashboard -->
    <string name="greeting">Hola %1s!</string>
    <string name="title">Android Bank</string>
    <string name="total_balance">Saldo total:</string>
    <string name="money_sign">$</string>

</resources>